--- a/packages/ndla-ui/src/global/components/component.resources.scss
+++ b/packages/ndla-ui/src/global/components/component.resources.scss
@@ -3,7 +3,6 @@
   border-top: 1px solid $background-color--gray-dark;
   padding-bottom: $spacing--large;
   padding-top: $spacing;
-  margin-top: $spacing--large;
 
   &--transparent {
     background: transparent;
